--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,9 @@ opt-level = 3
 
 [dependencies]
 rand = "0.8.5"
-bevy = { version = "0.11", features = ["jpeg"] }
+bevy = { version = "0.11", features = ["jpeg", "wav"] }
+bevy-inspector-egui = "0.19.0"
+bevy_screen_diagnostics = "0.3.0"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 bevy = { version = "0.11", features = ["dynamic_linking"] }
