--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ rand = "0.8.5"
 bevy = { version = "0.11", features = ["jpeg", "wav"] }
 bevy-inspector-egui = "0.19.0"
 bevy_screen_diagnostics = "0.3.0"
+bevy_mod_picking = { version = "0.14.0", default-features = false, features = ["backend_raycast"], git = "https://github.com/bardt/bevy_mod_picking.git", rev = "7ecb60e08735ce82f9ff03ba5adb434c1e336afd" }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 bevy = { version = "0.11", features = ["dynamic_linking"] }
