--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,12 +19,13 @@ opt-level = 3
 
 [dependencies]
 rand = "0.8.5"
-bevy = { version = "0.11", features = ["jpeg"] }
-bevy-inspector-egui = "0.19.0"
+bevy = { version = "0.11", features = ["webp"] }
 # bevy_screen_diagnostics = "0.3.0"
 # bevy_mod_picking = { version = "0.14.0", default-features = false, features = ["backend_raycast"], git = "https://github.com/bardt/bevy_mod_picking.git", rev = "7ecb60e08735ce82f9ff03ba5adb434c1e336afd" }
 # bevy_rapier2d = { version = "0.22.0" }
 # bevy_rapier_collider_gen = { git = "https://github.com/CyberTea0X/bevy_rapier_collider_gen.git", branch = "main" }
+bevy_pkv = "0.8.0"
+bevy-inspector-egui = "0.19.0"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 bevy = { version = "0.11", features = ["dynamic_linking"] }
