--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -39,7 +39,8 @@
 			"command": "build",
 			"args": [
 				"--features",
-				"dev"
+				"dev",
+				"dyn",
 			],
 			"problemMatcher": [
 				"$rustc"
