--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -39,8 +39,7 @@
 			"command": "build",
 			"args": [
 				"--features",
-				"dev",
-				"dyn",
+				"dev,dyn",
 			],
 			"problemMatcher": [
 				"$rustc"
